- На 90% переписан DialogFragment, LikesFragment, большинство кода убрано в FeedFragment (MutualFragment на очереди) - На 99% код DialogListAdapter и LikesListAdapter стандартизирован и вынесен в FeedAdapter - Создан AbstractFeedItem, он него теперь наследуются Dialog и FeedLike, дабы не дублировать код - Унифицированы ac_feed.xml и ac_dialog.xml, перенесены в ac_feed.xml и сами удалены - Оптимизированы layout - Мрт -> Мар (а то какой то Вонни и его друзья в times.xml)